--- a/cabeleleira/pages/local.html
+++ b/cabeleleira/pages/local.html
@@ -12,7 +12,7 @@
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/style.css">
 
     <title>Stallos Cabelereiros - Localização</title>
 
@@ -86,7 +86,7 @@
 
         </nav>
 
-        <!-- SEÇÃO SERVIÇOS -->
+        <!-- SEÇÃO LOCALIZAÇÃO -->
 
         <section id="servicos" class="container-fluid mx-0 px-0">
 
@@ -144,7 +144,9 @@
 
                 <span class="txt-corp text-white">Stallos Cabelereiros &copysr; 2020.</span>
                 <br>
-                <span class="txt-corp text-white">Desenvolvido por: Ollimpium Digital Marketing Agency.</span>
+                <a href="">
+                    <span class="txt-corp text-white">Desenvolvido por: Ollimpium Digital Marketing Agency.</span>
+                </a>
 
             </div>
 
@@ -157,14 +159,14 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-        <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../assets/js/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <script src="../js/essential.js"></script>
+    <script src="../assets/js/essential.js"></script>
 </body>
 
 </html>
