--- a/cabeleireira/pages/local.html
+++ b/cabeleireira/pages/local.html
@@ -26,19 +26,26 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <!-- STYLES -->
-    <link rel="shortcut icon" href="../images/favicon.ico"/>
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="../assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/scroll-indicator.css">
+    <link rel="stylesheet" href="../assets/styles/animate.css">
 
 </head>
 
-<body>
+<body class="theme-scroll" onload="myFunction()">
     <div class="container-fluid m-0 p-0">
         
+        <!-- PROGRESS BAR -->
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+
         <!-- NAVBAR -->
 
-        <nav id="menuTop" class="navbar navbar-expand-md sticky-top justify-content-md-between d-md-flex bg-white p-0 shadow">
+        <nav id="menuTop" class="navbar navbar-expand-md sticky-top justify-content-md-between d-md-flex bg-white p-0 shadow width-menu">
 
-            <div class="w-100 d-md-none text-center position-absolute" style="top: 0; z-index: 80;">
+            <div class="w-100 pl-4 pl-sm-0 d-md-none text-center position-absolute" style="top: 0; z-index: 80;">
                 <img class="img-logo" src="../images/logo.png" alt="">
             </div>
             
@@ -85,7 +92,7 @@
             </div>
 
             <!-- PARA O MODO MD EM DIANTE -->
-            <ul id="redes-sociais-hide" class="nav align-items-baseline justify-content-center d-none d-md-inline-flex">
+            <ul id="redes-sociais-right" class="nav align-items-baseline justify-content-center d-none d-md-inline-flex">
                 <li class="nav-item">
                     <a href="https://www.facebook.com/stalloshair" target="_blank" class="nav-link02"><i class="fab fa-facebook-f"></i></a>
                 </li>
@@ -181,6 +188,8 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="../assets/js/essential.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/wow-instance.js"></script>
 </body>
 
 </html>
