--- a/cabeleireira/pages/local.html
+++ b/cabeleireira/pages/local.html
@@ -73,8 +73,8 @@
 
             <div class="collapse navbar-collapse justify-content-center" id="navbarTop">
                 <ul class="navbar-nav text-center mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-item nav-link text-uppercase scroll active" href="#aTop">home</a>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link text-uppercase" href="./index.php">home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-item nav-link text-uppercase scroll" href="#servicos">serviços</a>
@@ -121,7 +121,7 @@
                         </span>
                         <br>
                         <span class="txt-padrao">
-                            <a class="nav-link wow fadeInLeft"ref="https://wa.me/5511973454151" target="_blank"><i class="fab fa-whatsapp mr-2"></i>(11) 97345-4151</a> <span class="wow fadeInLeft d-none d-md-block">|</span> <a class="nav-link wow fadeInRight"ref="mailto:atendimento@stalloscabeleireiros.com.br"><i class="far fa-envelope mr-2"></i>atendimento@stalloscabeleireiros.com.br</a>
+                            <a class="nav-link wow fadeInLeft"ref="https://wa.me/5511973454151" target="_blank"><i class="fab fa-whatsapp mr-2"></i>(11) 97345-4151</a> <a class="nav-link wow fadeInRight"ref="mailto:atendimento@stalloscabeleireiros.com.br"><i class="far fa-envelope mr-2"></i>atendimento@stalloscabeleireiros.com.br</a>
                         </span>
 
                         <h5 class="w-100 mt-3 text-center text-uppercase font-weight-normal">horário de funcionamento</h5>
